# onyxian

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KICKSTART.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: vault-bootstrap.md
.claude/skills/add-module/: SKILL.md
.claude/skills/cut-release/: SKILL.md
.claude/skills/regen-artifacts/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
adapters/: README.md
adapters/claude-code/: README.md
core/conventions/: authoring.md
core/onyx/: __init__.py  adapters.py  cli.py  errors.py  external.py  fsio.py  intent.py  lockio.py  manifests.py  paths.py  repo.py  resolve.py  sources.py
core/onyxian/: __init__.py  adapters.py  adopt.py  applier.py  checkpoints.py  cli.py  compat.py  config_edit.py  configio.py  diff.py  doctor.py  errors.py  external.py  fsio.py  intent.py  interview.py  lockio.py  manifests.py  model.py  mutex.py  paths.py  planner.py  project_new.py  render.py  repo.py  resolve.py  scopecheck.py  skillcheck.py  sources.py  yamlio.py
core/scaffold/: __init__.py  adapters.py  adopt.py  applier.py  cli.py  config_edit.py  configio.py  doctor.py  interview.py  model.py  planner.py  render.py  repo.py  yamlio.py
docs/: module-authoring.md  user-guide.md
examples/: README.md
examples/demo/: CLAUDE.md  Onyx Assistant.md  Onyxian Assistant.md  Start-Here.md
examples/demo/.claude/: onyx.md
examples/demo/.vault/: config.yaml  lock.json
examples/demo/Fitness/: Goals.md
examples/demo/Reading/: 00 Dashboard.md
examples/fitness-focused/: Home.md  Onyxian Assistant.md  Start-Here.md
examples/fitness-focused/.claude/: onyx.md  onyxian.md
examples/fitness-focused/.vault/: config.yaml  lock.json
examples/fitness-focused/Fitness/: 00 Dashboard.md  Recurring Tasks.md
examples/gamedev/: Home.md  Onyxian Assistant.md  Start-Here.md
examples/gamedev/.claude/: onyxian.md
examples/gamedev/.vault/: config.yaml  lock.json
examples/minimal/: Start-Here.md
examples/minimal/.claude/: onyxian.md
examples/minimal/.vault/: config.yaml  lock.json
examples/musician/: CLAUDE.md  Onyxian Assistant.md  Start-Here.md
examples/musician/.claude/: onyxian.md
examples/musician/.obsidian/: daily-notes.json
examples/musician/.vault/: config.yaml  lock.json
examples/musician/Music/: 00 Dashboard.md  Goals.md
examples/phd-student/: Onyxian Assistant.md  Start-Here.md
examples/phd-student/.claude/: onyx.md  onyxian.md
examples/phd-student/.vault/: config.yaml  lock.json
examples/phd-student/Reading/: Reading-Pipeline.base
examples/researcher-developer/: Home.md  Start-Here.md
examples/researcher-developer/.claude/: onyx.md  onyxian.md
examples/researcher-developer/.obsidian/: community-plugins.json
examples/researcher-developer/.vault/: config.yaml  lock.json
examples/researcher-developer/Fitness/: Goals.md
examples/student/: Home.md  Onyxian Assistant.md  Start-Here.md
examples/student/.claude/: onyx.md  onyxian.md
examples/student/.vault/: config.yaml  lock.json
examples/writer/: Onyxian Assistant.md  Start-Here.md
examples/writer/.claude/: onyx.md  onyxian.md
examples/writer/.vault/: config.yaml  lock.json
examples/writer/Reading/: Reading-Pipeline.base
modules/academic/: module.yaml
modules/academic/agents/: study-coach.yaml
modules/academic/docs/: README.md
modules/ai-workspace/: module.yaml
modules/ai-workspace/docs/: README.md
modules/core/: module.yaml
modules/core/assets/: Home.md
modules/core/docs/: README.md
modules/daily-notes/: module.yaml
modules/daily-notes/agents/: daily-planner.yaml
modules/daily-notes/docs/: README.md
modules/fitness/: module.yaml
modules/fitness/agents/: fitness-coach.yaml
modules/fitness/docs/: README.md
modules/music/: module.yaml
modules/music/agents/: practice-coach.yaml
modules/music/docs/: README.md
modules/oss/: module.yaml
modules/oss/agents/: oss-scout.yaml
modules/oss/docs/: README.md
modules/projects-gamedev/: module.yaml
modules/projects-gamedev/agents/: game-steward.yaml
modules/projects-gamedev/docs/: README.md
modules/projects-software/: module.yaml
modules/projects-software/agents/: project-steward.yaml
modules/projects-software/docs/: README.md
modules/reading/: module.yaml
modules/reading/agents/: reading-triager.yaml
modules/reading/docs/: README.md
modules/research/: module.yaml
modules/research/agents/: research-librarian.yaml
modules/research/docs/: README.md
modules/writing/: module.yaml
modules/writing/agents/: blog-editor.yaml
modules/writing/docs/: README.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/vault-bootstrap/: SKILL.md
plugin/skills/vault-conventions/: naming.md
profiles/: README.md  fitness-focused.yaml  gamedev.yaml  minimal.yaml  musician.yaml  phd-student.yaml  researcher-developer.yaml  student.yaml  writer.yaml
tests/: conftest.py  test_adapters.py  test_add.py  test_adopt.py  test_agent_evals.py  test_agents.py  test_agentsmd.py  test_applier.py  test_checkpoints.py  test_cli.py  test_config_edit.py  test_configio.py  test_diff.py  test_doctor.py  test_examples.py  test_external.py  test_fsio.py  test_golden.py  test_golden_lifecycle.py  test_hook_scope_check.py  test_idempotency.py  test_interview.py  test_lockio.py  test_manifests.py  test_module_bumps.py  test_modules_m2.py  test_mutex.py  test_obsidian_stub.py  test_paths.py  test_planner.py  test_plugin.py  test_project_new.py  test_release_pipeline.py  test_remove.py  test_render.py  test_resolve.py  test_scopecheck.py  test_skills.py  test_skills_resolve.py  test_sources.py  (+1 more)
tests/evals/: CLI_SEMANTICS.md  README.md  __init__.py  contracts.py  harness.py  obsidian_stub.py
tests/fixtures/answers/: daily.yaml  minimal.yaml
tools/: README.md  build_plugin.py  check_module_bumps.py  eval_live.py  gen_examples.py  lifecycle_scenarios.py  pinned.py  regen_golden.py
(+264 files in other folders)
