[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyxian"
version = "1.1.0"
description = "An open-source, AI-native framework for Obsidian vaults: opt-in modules, a declarative reconciliation engine, and agent-optional workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["obsidian", "knowledge-management", "agent-skills", "claude-code", "pkm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "build>=1.2",
]

[project.scripts]
onyxian = "onyxian.cli:main"

[project.urls]
Homepage = "https://github.com/odysseia06/onyxian"
Repository = "https://github.com/odysseia06/onyxian"

[tool.pytest.ini_options]
testpaths = ["tests"]

# The engine lives at core/onyxian/ and is importable as the `onyxian` package
# (KICKSTART.md §4.2). `packages` strips the `core/` prefix to give the `onyxian`
# package — a prefix removal, which is what keeps editable (`pip install -e .`)
# installs working (a prefix *rename* breaks hatchling's editable mode). The
# content library (modules/, profiles/) lives at the repo root and is
# force-included into the wheel under onyxian/_library/ so an installed package
# finds it via importlib without a git checkout (resolution: core/onyxian/repo.py).
[tool.hatch.build.targets.wheel]
packages = ["core/onyxian"]

[tool.hatch.build.targets.wheel.force-include]
"modules" = "onyxian/_library/modules"
"profiles" = "onyxian/_library/profiles"
